Some formatting improvements on the teacher page.

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,13 +7,14 @@
   
 - my_account = (current_user == current_object)
 - if my_account
-  - title "My Account"
+  #account-menu{:style => 'width:100%; height:2em;'}
+    %span#menu-item{:style => 'float:right;'}
+      = link_to "Add class", new_survey_group_path
+      |
+      = link_to "Log out", '/logout'
+  - title "My Classes"
 - else
-  - title "#{current_object.username}'s Account"
-
-- if my_account
-  %p
-    = link_to "Log out", '/logout'
+  - title "#{current_object.username}'s CLasses"
 
 %br
   
@@ -38,7 +39,7 @@
       Refer your students to 
       - url = url_for(:action => 'show', :id => current_user.pretty_url, :only_path => false)
       = link_to url, url
-      to record their answers and to view results.
+      to discover their value for <em>N</em> and to view the class' results.
   - else
     %p
       Find your group in the list below.
@@ -50,7 +51,7 @@
     %col{:width => 320}
     %thead
       %tr
-        %th Group
+        %th Class
         %th Completed Responses
         %th Incomplete Responses
         %th
@@ -82,6 +83,6 @@
   - if my_account
     %p
       %br
-      = link_to 'Add another group', new_survey_group_path
+      = link_to 'Add another class', new_survey_group_path
 
 
