--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -291,6 +291,12 @@ blockquote.signage
     em
       font-style: italic
 
+    #account-menu
+      width: 100%
+      height: 2em
+      span#menu-items
+        float: right
+        
     #disqus_thread #dsq-content h3
       font-size: 100%      
 
@@ -627,10 +633,8 @@ ul.n-results
         +border_radius(.25em)
         margin-right: 1em
       dd
-        margin-left 150px
-  
-
-
+        margin-left 150pt
+        
 #flash
   :margin 1em 0
   :background rgba(0,0,0,.3)
