--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -485,7 +485,8 @@ fieldset
     :list-style-type none
     :padding-left 0
     label
-      :display block
+      display: block
+      padding-top: 0.5em
       
 dt.bullet
   margin-left: 1em
