Only as students for their gender.

--- a/app/views/surveys/_demographics.html.haml
+++ b/app/views/surveys/_demographics.html.haml
@@ -7,11 +7,15 @@
   
 - title 'About You', 'Almost there&hellip;'
 
-%p 
-  In addition to teaching a little science, we hope to learn more about how different people around the world think about this issue. Please tell us a little about yourself so that we can compare your responses with others.
+- if current_object.survey_group
+  %p
+    We use basic information about you to learn how different people feel about the Drake Equation. Your teacher has already told us where you live (#{current_object.address}) and how hold you are (#{current_object.age_group.description}). Please tell us your gender so you can see if gender makes a difference in your class results.
+- else
+  %p 
+    In addition to teaching a little science, we hope to learn more about how different people around the world think about this issue. Please tell us a little about yourself so that we can compare your responses with others.
   
-%p
-  %em This is optional. Entering your Twitter username will allow us to associate that name and your Twitter avatar with your answer.
+  %p
+    %em This is optional. Entering your Twitter username will allow us to associate that name and your Twitter avatar with your answer.
   
 #form  
   - semantic_form_for current_object do |form|
@@ -23,7 +27,8 @@
         = form.input :country, :as => :country, :include_blank => true
         = form.input :age_group_id, :label => 'Age', :as => :select, :include_blank => true, :label_method => :description
       = form.input :gender, :as => :select, :collection => ['Male', 'Female'], :include_blank => true
-      = form.input :twitter_username
+      - unless current_object.survey_group
+        = form.input :twitter_username
     - form.buttons do
       = form.commit_button 'Finish'
     .humanized-value
