More teacher page tweaks.

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -640,3 +640,8 @@ ul.n-results
   :margin 1em 0
   :background rgba(0,0,0,.3)
   :padding 1em
+  
+.centered
+  text-align: center
+.right
+  text-align: right
