Don't render charts without data.

--- a/app/views/surveys/_chart_set.html.haml
+++ b/app/views/surveys/_chart_set.html.haml
@@ -13,36 +13,38 @@
 
   %ol.pie-charts
     - for member in dimension
-      %li
-        %h4
-          = member.nil? ? 'Unknown' : member.send(dimension_label_method) 
+      - count = data.select { |k,v| k[1].to_s == member.send(dimension_key_method).to_s }.map { |v| v.last }.sum
+      - if count > 0
+        %li
+          %h4
+            = member.nil? ? 'Unknown' : member.send(dimension_label_method) 
 
-        %dl
-          %dt Count
-          %dd= data.select { |k,v| k[1].to_s == member.send(dimension_key_method).to_s }.map { |v| v.last }.sum
-          %dt Average
-          %dd -
-          %dt Median
-          %dd -
-          %dt Min
-          %dd -
-          %dt Max
-          %dd -
-          %dt Stdev
-          %dd -
+          %dl
+            %dt Count
+            %dd= count
+            %dt Average
+            %dd -
+            %dt Median
+            %dd -
+            %dt Min
+            %dd -
+            %dt Max
+            %dd -
+            %dt Stdev
+            %dd -
 
-        %table.data
-          %thead
-            %tr
-              - for option in rational_options
-                %th= option.send(option_label_method)
+          %table.data
+            %thead
+              %tr
+                - for option in rational_options
+                  %th= option.send(option_label_method)
 
-          %tbody
-            %tr
-              - for option in rational_options                
-                %td
-                  - if member.nil?
-                    = data[[option.send(option_value_method).to_s, nil]].to_i + data[[option.send(option_value_method), '']].to_i
-                  - else
-                    = data[[option.send(option_value_method).to_s, member.send(dimension_key_method)]].to_i
+            %tbody
+              %tr
+                - for option in rational_options                
+                  %td
+                    - if member.nil?
+                      = data[[option.send(option_value_method).to_s, nil]].to_i + data[[option.send(option_value_method), '']].to_i
+                    - else
+                      = data[[option.send(option_value_method).to_s, member.send(dimension_key_method)]].to_i
 
