Added min and max values to the survey summary report.

--- a/app/views/surveys/_chart_set.html.haml
+++ b/app/views/surveys/_chart_set.html.haml
@@ -27,9 +27,9 @@
             %dt Median
             %dd -
             %dt Min
-            %dd -
+            %dd= data[:min][member_key]
             %dt Max
-            %dd -
+            %dd= data[:max][member_key]
             %dt Stdev
             %dd -
 
