Tweak to sample charting page.

--- a/app/views/surveys/_parameter_results.html.erb
+++ b/app/views/surveys/_parameter_results.html.erb
@@ -15,7 +15,7 @@
     <option>Unknown</option>
   </select>
 	
-	<div id="ages-group" style="width: 800px; height: 400px;"></div>
+	<div id="ages-group" style="width: 650px; height: 300px;"></div>
 
 	<table id="data-ages-group" style="display:none;">
     <caption>Estimates by age group 26-35</caption>
@@ -45,7 +45,6 @@
     </tbody>
   </table>
 
-
   <label>Show gender:</label>
   <select>
     <option disabled="disabled">Choose:</option>
@@ -54,16 +53,40 @@
     <option>Unknown</option>
   </select>
 
-	<div id="ages-all" style="width: 800px; height: 400px;"></div>
+	<div id="gender-group" style="width: 650px; height: 300px;"></div>
 
-	<table id="data-ages-all" style="display:none;">
-    <caption>Estimates for all ages</caption>
+	<table id="data-gender-group" style="display:none;">
+    <caption>Estimates for age 26-35</caption>
     <thead>
       <tr>
         <th>Value</th>
         <th>Count</th>
       </tr>
     </thead>
+    <tbody>
+      <tr>
+        <th>1</th>
+        <td>4</td>
+      </tr>
+      <tr>
+        <th>10</th>
+        <td>7</td>
+      </tr>
+      <tr>
+        <th>100</th>
+        <td>12</td>
+      </tr>
+      <tr>
+        <th>1000</th>
+        <td>7</td>
+      </tr>
+    </tbody>
+  </table>
+
+	<div id="all" style="width: 650px; height: 300px;"></div>
+
+	<table id="data-all" style="display:none;">
+    <caption>Estimates for age 26-35</caption>
     <tbody>
       <tr>
         <th>1</th>
@@ -79,59 +102,7 @@
       </tr>
       <tr>
         <th>1000</th>
-        <td>79</td>
-      </tr>
-    </tbody>
-  </table>
-
-	<div id="gender-group" style="width: 800px; height: 400px;"></div>
-
-	<table id="data-gender-group" style="display:none;">
-    <caption>Estimates for age 26-35</caption>
-    <thead>
-      <tr>
-        <th>Value</th>
-        <th>Count</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>Male</th>
-        <td>13</td>
-      </tr>
-      <tr>
-        <th>Female</th>
-        <td>12</td>
-      </tr>
-      <tr>
-        <th>Unknown</th>
-        <td>1</td>
-      </tr>
-    </tbody>
-  </table>
-
-	<div id="gender-all" style="width: 800px; height: 400px;"></div>
-
-	<table id="data-gender-all" style="display:none;">
-    <caption>Estimates for age 26-35</caption>
-    <thead>
-      <tr>
-        <th>Value</th>
-        <th>Count</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>Male</th>
-        <td>421</td>
-      </tr>
-      <tr>
-        <th>Female</th>
-        <td>378</td>
-      </tr>
-      <tr>
-        <th>Unknown</th>
-        <td>84</td>
+        <td>379</td>
       </tr>
     </tbody>
   </table>
@@ -206,69 +177,6 @@ var chart;
 $(document).ready(function() {
 	chart = new Highcharts.Chart({
 		chart: {
-			renderTo: 'ages-all',
-			defaultSeriesType: 'column'
-		},
-		title: {
-			text: 'Estimates for all ages'
-		},
-		xAxis: {
-			categories: ['1', '10', '100', '1000']
-		},
-		yAxis: {
-			title: {
-				text: 'Number of Responses'
-			}
-		},
-		tooltip: {
-			formatter: function() {
-				return '' + this.y +' users responded with '+ this.x.toLowerCase();
-			}
-		},
-		plotOptions: {
-			column: {
-				data: 'data-ages-all',
-				// define a custom data parser function for both series
-				dataParser: function(data) {
-					var table = document.getElementById(data),
-						// get the data rows from the tbody element
-						rows = table.getElementsByTagName('tbody')[0].getElementsByTagName('tr'),
-						// define the array to hold the real data
-						result = [], 
-						// decide which column to use for this series
-						column = { 'Count': 0 }[this.options.name];
-						
-					// loop through the rows and get the data depending on the series (this) name
-					for (var i = 0; i < rows.length; i++) {						
-						result.push(
-							parseInt(
-								rows[i].getElementsByTagName('td')[column]. // the data cell
-								innerHTML
-							)
-						);
-					}
-					return result;
-				}
-			}
-		},
-		credits: {
-			enabled: false
-		},
-		legend: {
-			enabled: false
-		},
-		series: [{
-			name: 'Count'
-		}]
-	});
-	
-	
-});
-
-var chart;
-$(document).ready(function() {
-	chart = new Highcharts.Chart({
-		chart: {
 			renderTo: 'gender-group',
 			defaultSeriesType: 'column'
 		},
@@ -276,7 +184,7 @@ $(document).ready(function() {
 			text: 'Estimates by males'
 		},
 		xAxis: {
-			categories: ['Male', 'Female', 'Unknown']
+			categories: ['1', '10', '100', '1000']
 		},
 		yAxis: {
 			title: {
@@ -332,14 +240,14 @@ var chart;
 $(document).ready(function() {
 	chart = new Highcharts.Chart({
 		chart: {
-			renderTo: 'gender-all',
+			renderTo: 'all',
 			defaultSeriesType: 'column'
 		},
 		title: {
-			text: 'Estimates for all genders'
+			text: 'All Estimates'
 		},
 		xAxis: {
-			categories: ['Male', 'Female', 'Unknown']
+			categories: ['1', '10', '100', '1000']
 		},
 		yAxis: {
 			title: {
@@ -353,7 +261,7 @@ $(document).ready(function() {
 		},
 		plotOptions: {
 			column: {
-				data: 'data-gender-all',
+				data: 'data-all',
 				// define a custom data parser function for both series
 				dataParser: function(data) {
 					var table = document.getElementById(data),
@@ -388,6 +296,6 @@ $(document).ready(function() {
 		}]
 	});
 	
-	
 });
+
 </script>
