Minor tweaks after feedback on exercise.

--- a/app/views/surveys/_parameter_results.html.erb
+++ b/app/views/surveys/_parameter_results.html.erb
@@ -27,19 +27,19 @@
     </thead>
     <tbody>
       <tr>
-        <th>1</th>
+        <th>1-9</th>
         <td>4</td>
       </tr>
       <tr>
-        <th>10</th>
+        <th>10-99</th>
         <td>7</td>
       </tr>
       <tr>
-        <th>100</th>
+        <th>100-999</th>
         <td>12</td>
       </tr>
       <tr>
-        <th>1000</th>
+        <th>1000-9999</th>
         <td>7</td>
       </tr>
     </tbody>
@@ -65,19 +65,19 @@
     </thead>
     <tbody>
       <tr>
-        <th>1</th>
+        <th>1-9</th>
         <td>4</td>
       </tr>
       <tr>
-        <th>10</th>
+        <th>10-99</th>
         <td>7</td>
       </tr>
       <tr>
-        <th>100</th>
+        <th>100-999</th>
         <td>12</td>
       </tr>
       <tr>
-        <th>1000</th>
+        <th>1000-9999</th>
         <td>7</td>
       </tr>
     </tbody>
@@ -89,19 +89,19 @@
     <caption>Estimates for age 26-35</caption>
     <tbody>
       <tr>
-        <th>1</th>
+        <th>1-9</th>
         <td>410</td>
       </tr>
       <tr>
-        <th>10</th>
+        <th>10-99</th>
         <td>713</td>
       </tr>
       <tr>
-        <th>100</th>
+        <th>100-999</th>
         <td>1275</td>
       </tr>
       <tr>
-        <th>1000</th>
+        <th>1000-9999</th>
         <td>379</td>
       </tr>
     </tbody>
@@ -121,7 +121,7 @@ $(document).ready(function() {
 			text: 'Estimates by age group 26-35'
 		},
 		xAxis: {
-			categories: ['1', '10', '100', '1000']
+			categories: ['1-9', '10-99', '100-999', '1000-9999']
 		},
 		yAxis: {
 			title: {
@@ -184,7 +184,7 @@ $(document).ready(function() {
 			text: 'Estimates by males'
 		},
 		xAxis: {
-			categories: ['1', '10', '100', '1000']
+			categories: ['1-9', '10-99', '100-999', '1000-9999']
 		},
 		yAxis: {
 			title: {
@@ -247,7 +247,7 @@ $(document).ready(function() {
 			text: 'All Estimates'
 		},
 		xAxis: {
-			categories: ['1', '10', '100', '1000']
+			categories: ['1-9', '10-99', '100-999', '1000-9999']
 		},
 		yAxis: {
 			title: {
