deleted a comment or two

--- a/app/views/surveys/_parameter_results.html.erb
+++ b/app/views/surveys/_parameter_results.html.erb
@@ -86,7 +86,7 @@ $(document).ready(function() {
 			backgroundColor: '#0A0A0A',
 		},
 		title: {
-			text: "Answers for Gender"	//TODO fix so it is flexible
+			text: "Answers for Gender"	
 		},
 		xAxis: {
 			categories: ['1-9', '10-99', '100-999', '1000-9999']
